<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="me.paheartbeat.learning.intentfilterexample.MainActivity">

	<TextView
		android:id="@+id/tvTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:text="@string/lbl_main_activity"
		android:textSize="20sp"/>

	<ImageButton
		android:id="@+id/ibLogo"
		android:layout_centerHorizontal="true"

		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/tvTitle"
		android:layout_marginTop="5dp"

		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"

		android:layout_marginStart="5dp"
		android:layout_marginEnd="5dp"

		android:src="@drawable/tp_logo_text"
		android:minHeight="30dp"
		android:maxHeight="150dp"/>

	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/txtDomain"
		android:layout_below="@+id/ibLogo"
		android:layout_marginTop="4dp"
		android:layout_centerHorizontal="true"
		android:hint="@string/hint_txtDomain"
		android:textColorHint="@android:color/holo_blue_light"/>
	<Button
		android:id="@+id/btnOpenBrowser"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/txtDomain"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="5dp"
		android:text="@string/lbl_btnBrowser"/>

	<Button
		android:id="@+id/btnOpenBrowserWithLaunchOption"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/btnOpenBrowser"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="2dp"
		android:text="@string/lbl_btnBrowserWithLaunch"/>

	<Button
		android:id="@+id/btnExceptionCase"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/btnOpenBrowserWithLaunchOption"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="2dp"
		android:text="@string/lbl_btnExceptionCondition"/>

</RelativeLayout>
